--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,12 @@
+$night0: hsl(137, 8%, 17%);
+$night1: hsl(137, 5%, 88%);
+
+$grey0: hsl(0, 0%, 98%);
+
+$aqua0: hsl(175, 100%, 20%);
+$aqua1: hsl(175, 100%, 25%);
+$aqua2: hsl(175, 100%, 15%);
+
 body {
   margin: 0;
   padding: 0;
@@ -6,9 +15,49 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $night0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.flexCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loginContainer {
+  @extend .flexCenter;
+  flex-direction: column;
+  border-radius: 7px;
+  height: 400px;
+  width: 520px;
+  margin: 13% auto 0;
+  background: $night1;
+
+  &__registerEmail-btn {
+    color: $grey0;
+    border-radius: 5px;
+    height: 50px;
+    width: 175px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 14px;
+    background: $aqua0;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    border-bottom: 3px solid $aqua2;
+    box-shadow: 0 3px 4px $night0;
+
+    &:focus {
+      outline: none;
+    }
+    &:active, &:hover {
+      background: $aqua1;
+      border-bottom: 0;
+    }
+    &:active {
+      border-top: 1px solid $aqua2;
+      box-shadow: inset 0 0 4px $night0;
+    }
+  }
 }
