--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@ $night0: hsl(137, 8%, 17%);
 $night1: hsl(137, 5%, 88%);
 
 $grey0: hsl(0, 0%, 98%);
+$grey1: hsl(175, 5%, 75%);
+
+$purple: hsl(240, 100%, 76%);
+$purple2: hsl(240, 100%, 66%);
 
 $aqua0: hsl(175, 100%, 20%);
 $aqua1: hsl(175, 100%, 25%);
@@ -40,7 +44,7 @@ body {
     width: 175px;
     cursor: pointer;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
     background: $aqua0;
     border-top: 0;
     border-right: 0;
@@ -59,5 +63,67 @@ body {
       border-top: 1px solid $aqua2;
       box-shadow: inset 0 0 4px $night0;
     }
+    &:disabled, &[disabled]:hover, &[active]:hover {
+      border: none;
+      box-shadow: none;
+      cursor: not-allowed;
+      background: grey;
+    }
+  }
+
+  &__form {
+    text-align: center;
+
+    &__input {
+      @extend .flexCenter;
+      height: 30px;
+      width: 300px;
+      font-size: 16px;
+      margin-bottom: 10px;
+      font-weight: 500;
+      padding: 6px 11px;
+      border-radius: 5px;
+      border: 3px solid $grey1;
+      transition: border-color 175ms ease-in-out;
+      &:focus {
+        outline: none;
+        border: 3px solid $purple;
+      }
+    }
+  }
+}
+
+.NotFound {
+  @extend .flexCenter;
+  border-radius: 7px;
+  padding: 50px 75px;
+  max-width: 1200px;
+  text-align: center;
+  margin: 15% auto;
+  background: $grey1;
+
+  &__section {
+    line-height: 1;
+
+    &__p1, &__p2, &__p3 {
+      margin: 0;
+    }
+    &__p1 {
+      font-size: 120px;
+    }
+    &__p2 {
+      font-size: 144px;
+    }
+    &__p3 {
+      font-size: 72px;
+    }
+  }
+
+  &__backBtn {
+    @extend .loginContainer__registerEmail-btn;
+    margin-top: 25px;
+    width: 500px;
+    height: 125px;
+    font-size: 48px;
   }
 }
