--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,9 @@ $night0: hsl(137, 8%, 17%);
 $night1: hsl(137, 5%, 88%);
 
 $grey0: hsl(0, 0%, 98%);
+$grey1: hsl(175, 5%, 75%);
+
+$purple: hsl(240, 100%, 76%);
 
 $aqua0: hsl(175, 100%, 20%);
 $aqua1: hsl(175, 100%, 25%);
@@ -40,7 +43,7 @@ body {
     width: 175px;
     cursor: pointer;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
     background: $aqua0;
     border-top: 0;
     border-right: 0;
@@ -58,6 +61,27 @@ body {
     &:active {
       border-top: 1px solid $aqua2;
       box-shadow: inset 0 0 4px $night0;
+    }
+  }
+
+  &__form {
+    text-align: center;
+
+    &__input {
+      @extend .flexCenter;
+      height: 30px;
+      width: 300px;
+      font-size: 16px;
+      margin-bottom: 10px;
+      font-weight: 500;
+      padding: 6px 11px;
+      border-radius: 5px;
+      border: 3px solid $grey1;
+      transition: border-color 175ms ease-in-out;
+      &:focus {
+        outline: none;
+        border: 3px solid $purple;
+      }
     }
   }
 }
