--- a/src/index.scss
+++ b/src/index.scss
@@ -62,6 +62,12 @@ body {
       border-top: 1px solid $aqua2;
       box-shadow: inset 0 0 4px $night0;
     }
+    &:disabled, &[disabled]:hover, &[active]:hover {
+      border: none;
+      box-shadow: none;
+      cursor: not-allowed;
+      background: grey;
+    }
   }
 
   &__form {
