Styles NotFound page

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ $grey0: hsl(0, 0%, 98%);
 $grey1: hsl(175, 5%, 75%);
 
 $purple: hsl(240, 100%, 76%);
+$purple2: hsl(240, 100%, 66%);
 
 $aqua0: hsl(175, 100%, 20%);
 $aqua1: hsl(175, 100%, 25%);
@@ -89,5 +90,40 @@ body {
         border: 3px solid $purple;
       }
     }
+  }
+}
+
+.NotFound {
+  @extend .flexCenter;
+  border-radius: 7px;
+  padding: 50px 75px;
+  max-width: 1200px;
+  text-align: center;
+  margin: 15% auto;
+  background: $grey1;
+
+  &__section {
+    line-height: 1;
+
+    &__p1, &__p2, &__p3 {
+      margin: 0;
+    }
+    &__p1 {
+      font-size: 120px;
+    }
+    &__p2 {
+      font-size: 144px;
+    }
+    &__p3 {
+      font-size: 72px;
+    }
+  }
+
+  &__backBtn {
+    @extend .loginContainer__registerEmail-btn;
+    margin-top: 25px;
+    width: 500px;
+    height: 125px;
+    font-size: 48px;
   }
 }
