--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 * {
-	font-family: Lato;
+	font-family: Lato, Roboto, Ubuntu, sans-serif;
 }
 
 $night0: hsl(137, 8%, 17%);
@@ -14,6 +14,8 @@ $purple2: hsl(240, 100%, 66%);
 $aqua0: hsl(175, 100%, 20%);
 $aqua1: hsl(175, 100%, 25%);
 $aqua2: hsl(175, 100%, 15%);
+
+$danger0: hsl(355, 70%, 46%);
 
 body {
   margin: 0;
@@ -33,48 +35,6 @@ body {
 }
 
 .loginContainer {
-  @extend .flexCenter;
-  flex-direction: column;
-  border-radius: 7px;
-  height: 450px;
-  width: 520px;
-  margin: 13% auto 0;
-  background: $night1;
-
-  &__registerEmail-btn {
-    color: $grey0;
-    border-radius: 5px;
-    height: 50px;
-    width: 175px;
-    cursor: pointer;
-    font-weight: 600;
-    font-size: 16px;
-    background: $aqua0;
-    border-top: 0;
-    border-right: 0;
-    border-left: 0;
-    border-bottom: 3px solid $aqua2;
-    box-shadow: 0 3px 4px $night0;
-
-    &:focus {
-      outline: none;
-    }
-    &:active, &:hover {
-      background: $aqua1;
-      border-bottom: 0;
-    }
-    &:active {
-      border-top: 1px solid $aqua2;
-      box-shadow: inset 0 0 4px $night0;
-    }
-    &:disabled, &[disabled]:hover, &[active]:hover {
-      border: none;
-      box-shadow: none;
-      cursor: not-allowed;
-      background: grey;
-    }
-  }
-
   &__form {
     text-align: center;
 
@@ -83,8 +43,7 @@ body {
       height: 30px;
       width: 300px;
       font-size: 16px;
-      margin-top: 5px;
-      margin-bottom: 15px;
+      margin: 5px auto 17px;
       font-weight: 500;
       padding: 6px 11px;
       border-radius: 5px;
@@ -97,12 +56,13 @@ body {
     }
 
     &__errorMessage {
-      background: hsl(0, 97%, 40%);
+      background: $danger0;
       padding: 3px 9px;
       border-radius: 15px;
       color: hsl(0, 97%, 95%);
       font-weight: 700;
       font-size: 14px;
+      transition: background-color 170ms linear;
     }
   }
 }
@@ -123,6 +83,7 @@ body {
       margin: 0;
     }
     &__p1 {
+      color: $danger0;
       font-size: 120px;
     }
     &__p2 {
@@ -131,13 +92,5 @@ body {
     &__p3 {
       font-size: 72px;
     }
-  }
-
-  &__backBtn {
-    @extend .loginContainer__registerEmail-btn;
-    margin-top: 25px;
-    width: 500px;
-    height: 125px;
-    font-size: 48px;
   }
 }
