Splits LoginRegistration to import two components
Init LoginForm w/ switch form btn

Adds a btn to allow switching to RegisterForm

Adds login post req for LoginForm.js

Init CreateAccount

Fixes Redirect and Route to CreateAccount after verification

Adds verifyEmail POST req

Removes unused styles

Adds missing trailing comma

Adds PropTypes for ESLint

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,8 @@ $danger0: hsl(355, 70%, 46%);
 	font-family: Lato, Roboto, Ubuntu, sans-serif;
 }
 
+$danger0: hsl(355, 70%, 46%);
+
 body {
   width: 100%;
   margin: 0;
