Gives match params for CreateAccount
Edits margin bottom

--- a/src/index.scss
+++ b/src/index.scss
@@ -65,7 +65,7 @@ body {
     }
 
     &__switch-btn {
-      margin: 7px auto;
+      margin: 7px auto 0;
       font-size: 14px;
       cursor: pointer;
       font-weight: 600;
