Replaces MUI Icons with MDIDX

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+$material-design-icons-font-directory-path: "~material-design-icons-iconfont/dist/fonts/";
+@import "~material-design-icons-iconfont/src/material-design-icons";
+
 $grey0: hsl(0, 0%, 98%);
 $grey1: hsl(175, 5%, 75%);
 $danger0: hsl(355, 70%, 46%);
