--- a/src/index.scss
+++ b/src/index.scss
@@ -73,3 +73,40 @@ body {
     }
   }
 }
+
+.responsive-card {
+  $mediaCardWidth: 760px;
+  min-width: 755px;
+  @media (max-width: $mediaCardWidth) {
+    height: 100% !important;
+    overflow-y: scroll;
+    min-width: 0;
+  }
+
+  &__actions {
+    @media (max-width: $mediaCardWidth) {
+      bottom: 0;
+      position: absolute;
+      width: 100%;
+    }
+  }
+
+  &__content {
+    @media (max-width: 760px) {
+      height: 100%;
+      overflow-y: scroll;
+    }
+  }
+}
+
+.forge-content {
+  padding-bottom: 50px;
+  @media (min-width: 1376px) {
+    width: 1245px !important;
+    margin: auto;
+  }
+}
+
+.custom-panel {
+  width: 400px;
+}
