Adds Equipment preview to ProfileModal
Adds resize event listender to trigger styles and some clean up

Increases loading user's loadouts by locally storing mh armors & weapons

Sets handleMediaQuery() on compDidMount

--- a/src/index.scss
+++ b/src/index.scss
@@ -81,12 +81,13 @@ body {
     height: 100% !important;
     overflow-y: scroll;
     min-width: 0;
+    background: red;
   }
 
   &__actions {
     @media (max-width: $mediaCardWidth) {
       bottom: 0;
-      position: absolute;
+      position: relative;
       width: 100%;
     }
   }
@@ -109,4 +110,8 @@ body {
 
 .custom-panel {
   width: 400px;
+}
+
+.responsive-card2 {
+  height: 100% !important;
 }
